@@ -58,8 +58,9 @@ class AtlasMLDtoTest {
         assertThat(back.getDescription()).isEqualTo("d");
     }
 
+    @SuppressWarnings("ConstantConditions")
     @Test
-    void testAtlasMLCompetencyDTO_nullMapping() throws JsonProcessingException {
+    void testAtlasMLCompetencyDTO_nullMapping() {
         AtlasMLCompetencyDTO fromNull = AtlasMLCompetencyDTO.fromDomain(null);
         assertThat(fromNull).isNull();
 
@@ -103,6 +104,7 @@ class AtlasMLDtoTest {
         assertThat(mapped.getType()).isEqualTo(RelationType.EXTENDS);
     }
 
+    @SuppressWarnings("ConstantConditions")
     @Test
     void testAtlasMLCompetencyRelationDTO_defaultsAndInvalids() {
         // fromDomain null
@@ -165,11 +167,11 @@ class AtlasMLDtoTest {
         SuggestCompetencyResponseDTO resp = new SuggestCompetencyResponseDTO(List.of(new AtlasMLCompetencyDTO(1L, "t", "d", 2L)));
         List<Competency> comps = resp.toDomainCompetencies();
         assertThat(comps).hasSize(1);
-        assertThat(comps.get(0).getTitle()).isEqualTo("t");
+        assertThat(comps.getFirst().getTitle()).isEqualTo("t");
 
         SuggestCompetencyRelationsResponseDTO rels = new SuggestCompetencyRelationsResponseDTO(List.of(new AtlasMLCompetencyRelationDTO(1L, 2L, "ASSUMES")));
         List<CompetencyRelation> mapped = rels.toDomainRelations();
         assertThat(mapped).hasSize(1);
-        assertThat(mapped.get(0).getType()).isEqualTo(RelationType.ASSUMES);
+        assertThat(mapped.getFirst().getType()).isEqualTo(RelationType.ASSUMES);
     }
 }
